[project]
name = "dpu-ib-simulator"
version = "0.1.0"
description = "Single-file DPU IB simulator with golden regression tests."
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0.2",
]

[project.optional-dependencies]
gui = [
  "PySide6>=6.7",
  "matplotlib>=3.8",
]
build = [
  "pyinstaller>=6.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
